--- a/app/styles/components/c_layer_panel.scss
+++ b/app/styles/components/c_layer_panel.scss
@@ -3,21 +3,45 @@
 .layerPanel {
   font-family: $font-family-primary;
   position: absolute;
-  top: 20px;
-  right: 20px;
-  border: 1px solid #000;
-  background: #fff;
+  background: $color9;
   z-index: 9;
   padding: 20px;
   right: 0;
   background-color: $color12;
   padding: 0 30px;
-  font-size: $font-size-xsmall;
   width: 320px;
   max-width: 320px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
-  font-weight: $font-weight-bold;
-  line-height: 3;
+  .title_acordion {
+    line-height: 3;
+    font-size: $font-size-xsmall;
+    font-weight: $font-weight-bold;
+  }
+  .input_acordion {
+    line-height: 3;
+    font-size: $font-size-xsmall;
+    font-weight: $font-weight-bold;
+    background-color: transparent;
+    border: none;
+    outline: 0;
+    width: 100%;
+  }
+  ::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: $color9;
+  }
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: $color9;
+  }
+  :-ms-input-placeholder {
+    /* IE 10+ */
+    color: $color9;
+  }
+  :-moz-placeholder {
+    /* Firefox 18- */
+    color: $color9;
+  }
   ul {
     list-style: none;
     color: $color9;
