--- a/app/styles/components/c_layer_panel.scss
+++ b/app/styles/components/c_layer_panel.scss
@@ -3,18 +3,52 @@
 .layerPanel {
   font-family: $font-family-primary;
   position: absolute;
-  background: #fff;
+  background: $color9;
   z-index: 9;
   padding: 20px;
   right: 0;
   background-color: $color12;
   padding: 0 30px;
-  font-size: $font-size-xsmall;
   width: 320px;
   max-width: 320px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
-  font-weight: $font-weight-bold;
-  line-height: 3;
+  .title_acordion {
+    line-height: 3;
+    font-size: $font-size-xsmall;
+    font-weight: $font-weight-bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    .content_box{
+      display: flex;
+    }
+  }
+  .input_acordion {
+    line-height: 3;
+    font-size: $font-size-xsmall;
+    font-weight: $font-weight-bold;
+    background-color: transparent;
+    border: none;
+    outline: 0;
+    width: 100%;
+  }
+  ::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: $color9;
+  }
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: $color9;
+  }
+  :-ms-input-placeholder {
+    /* IE 10+ */
+    color: $color9;
+  }
+  :-moz-placeholder {
+    /* Firefox 18- */
+    color: $color9;
+  }
   ul {
     list-style: none;
     color: $color9;
@@ -32,7 +66,7 @@
   .content_accordion {
     color: $color9;
     font-size: $font-size-xxsmall;
-    font-weight: font-weight-regular;
+    font-weight: $font-weight-regular;
     line-height: 2;
     text-transform: uppercase;
     padding-bottom: 30px;
@@ -68,6 +102,44 @@
     background-position: 0 0, 15px 0;
     padding-left: 10px;
     padding-right: 0;
+  }
+  .box_basemap{
+    width: 30px;
+    height: 30px;
+    border-radius: 2px;
+    border: 3px solid $color9;
+    margin-right: 12px;
+  }
+  .box_image_basemap{
+    width: 30px;
+    height: 30px;
+    border-radius: 2px;
+    border: 3px solid $color9;
+  }
+  .text_search{
+    display: block;
+    text-align: right;
+    font-size: $font-size-xsmall;
+    font-weight: $font-weight-regular;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: lowercase;
+    cursor: pointer;
+  }
+  .button_advanced_search{
+      width: 250px;
+      margin: 0 auto;
+      background-color: $color5;
+      display: block;
+      font-size: $font-size-small;
+      text-transform: uppercase;
+      font-weight: $font-weight-semi;
+      text-align: center;
+      color: $color9;
+      font-family: $font-family-primary;
+      letter-spacing: -0.1px;
+      padding: 10px 0;
+      cursor: pointer;
   }
 }
 .title_accordion {
