update logic layerPanel

--- a/app/styles/components/c_filter_panel.scss
+++ b/app/styles/components/c_filter_panel.scss
@@ -11,7 +11,7 @@
     border: solid 1px $color14;
     color: $color9;
     font-weight: $font-weight-regular;
-    font-size:$font-size-medium;
+    font-size:$font-size-xsmall;
     outline: 0;
     display: block;
     margin: 0 auto;
