--- a/app/styles/components/c_layer_panel.scss
+++ b/app/styles/components/c_layer_panel.scss
@@ -75,6 +75,9 @@
     text-transform: uppercase;
     padding-bottom: 30px;
   }
+  .list_checkbox{
+    padding-left: 30px;
+  }
   input[type="checkbox"] {
     background-image: -webkit-linear-gradient(hsla(0,0%,0%,.1), hsla(0,0%,100%,.1)), -webkit-linear-gradient(left, #c7c7c7 50%, #ef4323 50%);
     background-size: 100% 100%, 200% 100%;
