Mobile styles from header

--- a/app/styles/base/colors.scss
+++ b/app/styles/base/colors.scss
@@ -13,6 +13,7 @@ $blacksecondary: #011137;
 $greyish-brown: #4a4a4a;
 $greysecondary: #e8f4f9;
 $blue_gray: #2d3a57;
+$blackmenumobile: #0d1a34;
 
 /*THEME COLORS*/
 $color1: $lightsalmon;
@@ -29,6 +30,7 @@ $color11: $white-two;
 $color12: $blacksecondary;
 $color13: $blue_dark_second;
 $color14: $blue_gray;
+$color15: $blackmenumobile;
 
 /*FONT COLOR*/
 $font-color-1: $color7;
