--- a/app/styles/components/c_menu.scss
+++ b/app/styles/components/c_menu.scss
@@ -1,16 +1,20 @@
 @import '../base/text.scss';
 @import '../base/colors.scss';
+@import '../base/screen.scss';
 .c_header_menu {
   background-color: $bluesecondary;
   padding: 0 64px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  @media screen and (min-width: $screen-m) {
+    box-shadow: 0;
+  }
 }
 .c_menu {
   img {
     height: 70px;
-    display: inline;
     margin: 0 10px 0 0;
   }
-  height: 140px;
+  height: 80px;
   display: flex;
   text-transform: capitalize;
   font-weight: normal;
@@ -18,81 +22,123 @@
   font-size: 16px;
   line-height: 30px;
   align-items: center;
-  ul {
-    list-style: none;
-    li {
-      display: inline-block;
-      margin-right: 92px;
-      &:nth-last-child(2) {
-        margin-right: 46px;
-      }
-      &:last-child {
-        border-left: 1px solid $color9;
-        padding-left: 46px;
-        margin-right: 0;
-      }
-      a {
-        color: $color9;
-        text-decoration: none;
-        font-family: $font-family-primary;
-        font-size: $font-size-normal;
-        font-weight: $font-weight-regular;
-        letter-spacing: -0.1px;
-        cursor: pointer;
-      }
-      #menu_selected::after{
-        content: "";
-        display:block;
-        height: 4px;
-        border-radius: 100px;
-        background-color: #ffffff;
-        margin-top:1px;
-      }
-    }
-  }
-  .dropdown {
-    display: inline-block;
-    position: relative;
-  }
-  .dropdown_content {
+  ul{
     display: none;
-    position: absolute;
-    width: 200px;
-    background-color: $color9;
-    z-index: 99;
-    padding:15px;
-  	width:160px;
-  	transform: translate(-40%, 0px);
-    li {
+  }
+  .icon_menu_mobile{
+    display: block;
+    width: 21px;
+    cursor: pointer;
+  }
+  .img_mobile{
+    display: block;
+    height: 50px;
+  }
+  .img_desktop{
+    display: none;
+  }
+  .share_header{
+    display: block;
+    color: $color9;
+  }
+  @media screen and (min-width: $screen-m) {
+    height: 140px;
+    .img_mobile{
+      display: none;
+    }
+    .img_desktop{
       display: block;
-      padding-left: 0 !important;
-      margin-right: 0 !important;
-      line-height: 40px;
-      a{
-        opacity: 0.9;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 3.13;
-        text-align: center;
-        color: #0d1a34;
-        text-transform:uppercase;
-        transition:0.2s;
-        display:block;
-      }
-      a:hover{
-        opacity: 0.6;
-        background-color: #8bbcc7;
-      }
-      &:first-child {
-      }
-      &:last-child {
-        border-left: 0;
+    }
+    .icon_menu_mobile{
+      display: none;
+    }
+    .share_header{
+      display: none;
+    }
+    ul {
+      list-style: none;
+      display: block;
+      li {
+        display: inline-block;
+        margin-right: 50px;
+        &:nth-last-child(2) {
+          margin-right: 46px;
+        }
+        &:last-child {
+          border-left: 1px solid $color9;
+          padding-left: 46px;
+          margin-right: 0;
+        }
+        a {
+          color: $color9;
+          text-decoration: none;
+          font-family: $font-family-primary;
+          font-size: $font-size-normal;
+          font-weight: $font-weight-regular;
+          letter-spacing: -0.1px;
+          cursor: pointer;
+        }
+        #menu_selected::after{
+          content: "";
+          display:block;
+          height: 4px;
+          border-radius: 100px;
+          background-color: #ffffff;
+          margin-top:1px;
+        }
       }
     }
-  }
+    .dropdown {
+      display: inline-block;
+      position: relative;
+    }
+    .dropdown_content {
+      display: none;
+      position: absolute;
+      width: 200px;
+      background-color: $color9;
+      z-index: 99;
+      padding:15px;
+    	width:160px;
+    	transform: translate(-40%, 0px);
+      li {
+        display: block;
+        padding-left: 0 !important;
+        margin-right: 0 !important;
+        line-height: 40px;
+        a{
+          opacity: 0.9;
+          font-size: 15px;
+          font-weight: 400;
+          line-height: 3.13;
+          text-align: center;
+          color: #0d1a34;
+          text-transform:uppercase;
+          transition:0.2s;
+          display:block;
+        }
+        a:hover{
+          opacity: 0.6;
+          background-color: #8bbcc7;
+        }
+        &:first-child {
+        }
+        &:last-child {
+          border-left: 0;
+        }
+      }
+    }
 
-  .dropdown:hover > ul {
-    display: block;
+    .dropdown:hover > ul {
+      display: block;
+    }
+  }
+  @media screen and (min-width: $screen-l) {
+    ul{
+      li{
+        margin-right: 92px;
+      }
+    }
   }
 }
 #menu_transparent{
