--- a/app/styles/components/c_control_panel.scss
+++ b/app/styles/components/c_control_panel.scss
@@ -1,12 +1,24 @@
+@import '../base/text.scss';
+@import '../base/colors.scss';
 .controlPanel {
-  position: absolute;
-  top: 256px;
-  right: 20px;
-  border: 1px solid #000;
-  background: #fff;
-  z-index: 9;
-  padding: 20px;
   input {
     display: block;
+  }
+  select{
+    width: 260px;
+    height: 40px;
+    background-color: $color13;
+    border: solid 1px $color14;
+    color: $color9;
+    font-weight: $font-weight-regular;
+    font-size:$font-size-medium;
+    outline: 0;
+    display: block;
+    margin: 0 auto;
+    border-radius: 0;
+    margin-bottom: 7px;
+  }
+  label{
+    margin-left: 30px;
   }
 }
