--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -11,6 +11,7 @@
 @import 'components/c_header.scss';
 @import 'components/c_cover_page.scss';
 @import 'components/c_map.scss';
+@import 'components/c_timeline.scss';
 /*Layout*/
 @import 'layout/l-homepage.scss';
 
