--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -7,7 +7,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 
@@ -28,7 +27,6 @@ blockquote, q {
 }
 
 blockquote:before, blockquote:after, q:before, q:after {
-  content: '';
   content: none;
 }
 
@@ -39,7 +37,7 @@ table {
 
 @font-face {
   font-family: 'roboto';
-  src: url('roboto/Roboto-Regular.ttf') format('truetype');
+  src: url('roboto/Roboto-Regular.ttf') format('truetype'), url('roboto/Roboto-Bold.ttf') format('truetype'), url('roboto/Roboto-Light.ttf') format('truetype');
 }
 
 body {
@@ -54,6 +52,12 @@ body {
 
 .menu {
   position: relative;
+  padding-bottom: 30px;
+}
+
+/*HEADER MENU STYLES*/
+
+header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -85,7 +89,9 @@ body {
 }
 
 @media screen and (min-width: 769px) {
-  .menu .hamburger-icon { display: none; }
+  .menu .hamburger-icon {
+    display: none;
+  }
 }
 
 .menu .logo {
@@ -106,7 +112,9 @@ body {
   }
 }
 
-.desktop-menu { display: none; }
+.desktop-menu {
+  display: none;
+}
 
 @media screen and (min-width: 769px) {
   .desktop-menu {
@@ -115,15 +123,7 @@ body {
   }
 
   .desktop-menu img {
-    height:70px;
-  }
-
-  .img_mobile {
-    display: none;
-  }
-
-  .img_desktop {
-    display: block;
+    height: 70px;
   }
 
   .desktop-menu > li {
@@ -148,7 +148,6 @@ body {
     font-weight: normal;
     letter-spacing: -0.1px;
     cursor: pointer;
-    text-decoration: none;
   }
 
   .desktop-menu .selected:after {
@@ -254,7 +253,9 @@ body {
   transition: visibility 0s 0s;
 }
 
-.mobile-menu.-opened:before { opacity: 1; }
+.mobile-menu.-opened:before {
+  opacity: 1;
+}
 
 .mobile-menu .drawer {
   position: absolute;
@@ -320,14 +321,53 @@ body {
   line-height: 1.29;
   letter-spacing: 1px;
   text-align: center;
-  padding: 22px 60px;
   text-transform: uppercase;
   display: block;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  color: #FFF;
-  cursor: pointer;
-  text-decoration: none;
+  align-items: center;
+  padding: 0 30px;
+}
+
+.img_mobile {
+  display: block;
+}
+
+.img_desktop {
+  display: none;
+}
+
+.menu_transparent {
+  /*background-color: rgba(23, 64, 132, 0.8);*/
+}
+
+header img {
+  height: 45px;
+  display: inline;
+  margin: 0 10px 0 0;
+}
+
+header ul {
+  display: none;
+}
+
+.menu_close {
+  transform: translateX(-100%);
+}
+
+.menu_open {
+  transform: translateX(0%);
+}
+
+.menu_back {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  visibility: hidden;
+  transition: visibility 0.3s, opacity 0.3s;
 }
 
 .mobile-menu .drawer .forgot_text > a {
@@ -343,11 +383,11 @@ body {
 section {
   background-color: rgba(23, 64, 132, 0.8);
   height: calc(100% + 120px);
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   min-height: 730px;
+  padding: 0 30px;
 }
 
 section.pwd {
@@ -366,6 +406,24 @@ form {
   flex-direction: column;
   width: 450px;
   height: 100%;
+  /* padding: 0 20%; */
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 35px;
+  text-align: left;
+  display: block;
+  width: 100%;
+}
+
+/*FORM STYLES*/
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* height: 100%; */
 }
 
 .reg form {
@@ -425,7 +483,7 @@ input[type='submit'] {
   color: #fff;
   font-size: 14px;
   font-weight: 100;
-  width: 70%;
+  width: 100%;
   margin: 40px auto;
   height: 60px;
   cursor: pointer;
@@ -489,6 +547,47 @@ section p {
   justify-content: space-around;
 }
 
+.select_container:after {
+  width: 15px;
+  position: absolute;
+  content: '';
+  height: 15px;
+  background: transparent;
+  border-left: lightgrey 1px solid;
+  border-bottom: lightgrey 1px solid;
+  transform: rotate(-45deg);
+  right: 15px;
+  top: 5px;
+}
+
+section p {
+  line-height: 30px;
+  font-size: 25px;
+  text-align: left;
+  letter-spacing: 0.7px;
+}
+
+#first_p {
+  margin-top: 20px;
+}
+
+.cancel {
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
+}
+
+.log span {
+  display: flex;
+  justify-content: space-around;
+}
+
+.log span > a {
+  font-size: 14px;
+  font-weight: 500;
+}
+
 hr {
   width: 100%;
   margin: 40px 0;
@@ -498,6 +597,7 @@ hr {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-top: 40px;
 }
 
 .login_buttons a {
@@ -519,7 +619,7 @@ hr {
 }
 
 section.reg form {
-  width: 70%;
+  width: 100%;
 }
 
 .column-container {
@@ -528,7 +628,7 @@ section.reg form {
 }
 
 .column {
-  width: 48%;
+  width: 100%;
   display: inline;
 }
 
@@ -567,9 +667,7 @@ section.reg form {
 
 .bg {
   background-size: cover;
-  background-attachment: fixed;
-  background-position: 50%;
-  background-repeat: no-repeat;
+  background: no-repeat fixed 50%;
 }
 
 .bg.reg {
@@ -592,6 +690,39 @@ section.reg form {
   background-image: url('../img/man.png');
 }
 
+.bg.ty section {
+  height: calc(100% - 140px);
+}
+
+.bg.ty h1 {
+  margin-bottom: 30px;
+}
+
+.bg.al {
+  background-image: url('../img/ship3.png');
+  overflow: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  padding: 60px 25px 30px 25px;
+}
+
+.bg.al::before, .bg.log::before, .bg.reg::before, .bg.res::before, .bg.ty::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(23, 64, 132, 0.8);
+  z-index: -1;
+}
+
+#login_p {
+  text-align: center;
+}
+
 @media only screen and (max-device-width: 768px) {
   header {
     padding: 0 4%;
@@ -611,9 +742,28 @@ section.reg form {
 
   section {
     justify-content: flex-start;
-    padding: 10% 0 0!important;
+    padding: 10% 0 0 !important;
     height: 170%;
     max-height: 170%;
+  }
+
+  header nav {
+    width: 55%;
+  }
+
+  header a {
+    font-size: 26px !important;
+  }
+
+  body {
+    font-size: 22px;
+  }
+
+  section {
+    justify-content: flex-start;
+    /* padding: 10% 0 0!important; */
+    /* height: 170%; */
+    /*max-height: 170%;*/
   }
 
   select {
@@ -630,6 +780,19 @@ section.reg form {
     margin: 45px 0 0 !important;
   }
 
+  h1 {
+    margin: 0 0 0px !important;
+  }
+
+  form {
+    /* width: 80% !important; */
+  }
+
+  label {
+    font-size: 14px;
+    margin: 45px 0 0;
+  }
+
   input {
     -webkit-appearance: none;
     height: 60px;
@@ -643,6 +806,14 @@ section.reg form {
     width: 100%;
     font-size: 23px;
     display: block;
+  }
+
+  .tos span input {
+    -webkit-appearance: checkbox;
+  }
+
+  .select_container:after {
+    top: 20px;
   }
 
   .tos span input {
@@ -677,6 +848,382 @@ section.reg form {
   .cancel {
     font-size: 23px;
   }
+
+  .tos span {
+    font-size: 23px;
+  }
+
+  .pwd p {
+    font-size: 14px;
+    line-height: 40px;
+  }
+
+  .res .pwd p {
+    width: 80%;
+  }
+
+  .cancel {
+    font-size: 23px;
+  }
+}
+
+/*ALLOW PAGE STYLES*/
+
+.allow {
+  color: #FFF;
+  font-family: 'roboto', helvetica, arial, sans-serif;
+  overflow: hidden;
+  height: initial;
+  display: block;
+  min-height: initial;
+  padding: 30px;
+  z-index: 1;
+}
+
+.allow hr {
+  width: 100%;
+  max-width: 486px;
+  display: block;
+  margin: 0 auto 45px;
+}
+
+.allow a {
+  color: #FFF;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.allow h1 {
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  display: block;
+  text-align: left;
+}
+
+.allow h2 {
+  margin-bottom: 30px;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 1.68;
+  display: block;
+  text-align: left;
+}
+
+.allow .content {
+  margin: 0 auto 30px;
+  display: block;
+  box-sizing: border-box;
+}
+
+.allow .content > ul {
+  margin: 0px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 2;
+  display: block;
+  vertical-align: bottom;
+  box-sizing: border-box;
+}
+
+.allow .content > ul > li {
+  box-sizing: border-box;
+  display: block;
+}
+
+.allow .content > ul:first-child {
+  margin-right: 0px;
+}
+
+.allow .content > ul:last-child {
+}
+
+.allow #advise_email {
+  font-size: 14px;
+  font-weight: 500;
+  text-align: left;
+  display: block;
+  margin-bottom: 55px;
+  margin-top: 0;
+  box-sizing: border-box;
+}
+
+.allow #advise_email > a {
+  display: inline-block;
+  width: 100%;
+}
+
+.link_underline {
+  display: inline-block;
+}
+
+.link_underline:after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: #f04323;
+  margin-top: 1px;
+}
+
+.allow #button_allow {
+  background-color: #8abbc7;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: -0.1px;
+  cursor: pointer;
+  padding: 20px 100px;
+  display: block;
+  margin: 0 auto 30px;
+  text-align: center;
+}
+
+.allow #button_allow:after {
+  display: none;
+}
+
+.allow #allow_deny {
+  font-size: 14px;
+  font-weight: 500;
+  display: block;
+  text-align: center;
+  margin-bottom: 55px;
+}
+
+.allow p:last-child {
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  margin: 0;
+  font-family: 'roboto', helvetica, arial, sans-serif;
+}
+
+/*TABLET STYLES*/
+
+@media screen and (min-width: 640px) {
+  form {
+    max-width: 450px;
+  }
+
+  input[type='submit'] {
+    max-width: 250px;
+  }
+
+  section p {
+    text-align: center;
+  }
+
+  .column-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .column {
+    width: 48%;
+    display: inline;
+  }
+
+  label {
+    font-size: 14px;
+    margin: 45px 0 0;
+  }
+
+  .log span {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 70px;
+    text-align: center;
+    display: block;
+    width: 100%;
+  }
+
+  .allow h1 {
+    text-align: center;
+  }
+
+  header {
+    padding: 0 64px;
+  }
+
+  header img {
+  }
+
+  .bg.al {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .allow {
+    padding: 0px;
+    display: flex;
+  }
+
+  .allow h1 {
+    font-size: 70px;
+    margin-bottom: 30px;
+  }
+
+  .allow .content {
+    display: flex;
+  }
+
+  .allow .content > ul {
+    text-align: left;
+  }
+
+  .allow .content > ul:first-child {
+    margin-right: 25px;
+    text-align: left;
+  }
+
+  .allow .content > ul:last-child {
+    text-align: left;
+  }
+
+  .allow #advise_email > a {
+    display: inline-block;
+    width: inherit;
+  }
+}
+
+/*HEADER MENU STYLES*/
+
+@media screen and (min-width: 769px) {
+  .bg.al {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  header ul {
+    display: block;
+    list-style: none;
+  }
+
+  .allow {
+    padding: 0px;
+    z-index: 1;
+  }
+
+  header img {
+    height: 70px;
+  }
+
+  .share_header {
+    display: none !important;
+  }
+
+  .icon_menu_mobile {
+    display: none;
+  }
+
+  .img_mobile {
+    display: none;
+  }
+
+  .img_desktop {
+    display: block;
+  }
+
+  header ul > li {
+    display: inline-block;
+    margin-right: 40px;
+  }
+
+  header ul > li:nth-last-child(2) {
+    margin-right: 46px;
+  }
+
+  header ul > li:last-child {
+    border-left: 1px solid #FFF;
+    padding-left: 46px;
+    margin-right: 0;
+  }
+
+  header ul > li > a {
+    color: #FFF;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: normal;
+    letter-spacing: -0.1px;
+    cursor: pointer;
+  }
+
+  header .selected:after {
+    content: "";
+    display: block;
+    height: 4px;
+    border-radius: 100px;
+    background-color: #ffffff;
+    margin-top: 1px;
+  }
+
+  .dropdown {
+    display: inline-block;
+    position: relative;
+  }
+
+  .dropdown_content {
+    display: none;
+    position: absolute;
+    background-color: #FFF;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
+    z-index: 99;
+    padding: 15px;
+    width: 160px;
+    transform: translate(-40%, 0px);
+  }
+
+  .dropdown_content li {
+    display: block;
+    padding-left: 0 !important;
+    margin-right: 0 !important;
+    line-height: 40px;
+    text-align: center;
+  }
+
+  .dropdown_content li > a {
+    opacity: 0.9;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 3.13;
+    text-align: center;
+    color: #0d1a34;
+    text-transform: uppercase;
+    transition: 0.2s;
+    display: block;
+  }
+
+  .dropdown_content li > a:hover {
+    opacity: 0.6;
+    background-color: #8bbcc7;
+  }
+
+  .dropdown_content li:first-child {
+    margin-top: 0;
+  }
+
+  .dropdown_content li:last-child {
+    border-left: 0;
+  }
+
+  .dropdown:hover > ul {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header ul > li {
+    margin-right: 92px;
+  }
 }
 
 @-moz-document url-prefix() {
@@ -696,7 +1243,7 @@ section.reg form {
   }
 }
 
-@media all and (-ms-high-contrast:none) {
+@media all and (-ms-high-contrast: none) {
   input:required {
     border: 1px solid transparent;
   }
