--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -281,7 +281,6 @@
     margin: 20px 0;
   }
   .cancel {
-    width: 100%;
     text-align: center;
     text-decoration: none;
     color: #fff;
@@ -520,6 +519,16 @@
     display:block;
     height:1px;
     background-color: #fff;
+  }
+  .link_underline{
+    display:inline-block;
+  }
+  .link_underline:after{
+    content:"";
+    display:block;
+    height:1px;
+    background-color: #fff;
+    margin-top:2px;
   }
   .allow #button_allow {
     background-color: #8abbc7;
