update link styles

--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -527,7 +527,7 @@
     content:"";
     display:block;
     height:1px;
-    background-color: #fff;
+    background-color: #f04323;
     margin-top:2px;
   }
   .allow #button_allow {
