--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -1,5 +1,4 @@
-  /*END RESET*/
-
+  /*START RESET*/
   html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -33,6 +32,7 @@
   /*END RESET*/
   /**/
 
+  /*TYPOGRAPHY*/
   @font-face {
     font-family: 'roboto';
     src: url('roboto/Roboto-Regular.ttf') format('truetype');
@@ -46,6 +46,8 @@
     font-weight: 100;
     height: 100%;
   }
+
+  /*HEADER MENU STYLES*/
   header {
     height: 140px;
     display: flex;
@@ -185,6 +187,8 @@
     font-size: 70px;
     text-align: center;
   }
+
+  /*FORM STYLES*/
   form {
     display: flex;
     flex-direction: column;
@@ -352,6 +356,7 @@
     position: relative;
     top: -1px;
   }
+  /*BACKGROUND PAGES STYLES*/
   .bg {
     background-size: cover;
     background-attachment: fixed;
@@ -450,6 +455,7 @@
       font-size: 23px;
     }
   }
+  /*ALLOW PAGE STYLES*/
   .allow {
     color: #FFF;
     font-family: 'roboto';
@@ -565,6 +571,8 @@
     margin: 0;
     font-family: 'roboto';
   }
+
+  /*TABLET STYLES*/
   @media screen and (min-width: 640px) {
     header img {}
     .allow {
@@ -585,6 +593,7 @@
       text-align: left;
     }
   }
+  /*MEIDUM SCREENS STYLES*/
   @media screen and (min-width: 769px) {
     header ul {
       display: block;
