--- a/public/form/css/bundle.css
+++ b/public/form/css/bundle.css
@@ -1,4 +1,5 @@
   /*START RESET*/
+
   html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -31,8 +32,8 @@
   }
   /*END RESET*/
   /**/
-
   /*TYPOGRAPHY*/
+
   @font-face {
     font-family: 'roboto';
     src: url('roboto/Roboto-Regular.ttf') format('truetype');
@@ -46,8 +47,8 @@
     font-weight: 100;
     height: 100%;
   }
-
   /*HEADER MENU STYLES*/
+
   header {
     height: 140px;
     display: -webkit-box;
@@ -213,8 +214,8 @@
     font-size: 70px;
     text-align: center;
   }
-
   /*FORM STYLES*/
+
   form {
     display: -webkit-box;
     display: -webkit-flex;
@@ -416,6 +417,7 @@
     top: -1px;
   }
   /*BACKGROUND PAGES STYLES*/
+
   .bg {
     background-size: cover;
     background-attachment: fixed;
@@ -461,7 +463,7 @@
               justify-content: flex-start;
       padding: 10% 0 0!important;
       height: 170%;
-      max-height: 170%;
+      /*max-height: 170%;*/
     }
     select {
       height: 60px !important;
@@ -518,13 +520,16 @@
     }
   }
   /*ALLOW PAGE STYLES*/
+
   .allow {
     color: #FFF;
     font-family: 'roboto';
     overflow: hidden;
     padding: 30px;
-    height: 100%;
-        display:block;
+    height: initial;
+    display: block;
+    min-height: initial;
+    padding:30px !important;
   }
   .allow hr {
     width: 100%;
@@ -554,10 +559,10 @@
     font-weight: 400;
     line-height: 1.68;
     display: block;
-    text-align:center;
+    text-align: center;
   }
   .allow .content {
-    margin:0 auto;
+    margin: 0 auto;
     margin-bottom: 30px;
     display: block;
     box-sizing: border-box;
@@ -593,6 +598,10 @@
     margin-top: 0;
     box-sizing: border-box;
   }
+  .allow #advise_email>a {
+    display: inline-block;
+    width: 100%;
+  }
   .link_underline {
     display: inline-block;
   }
@@ -614,7 +623,7 @@
     padding: 20px 100px;
     display: block;
     margin-bottom: 30px;
-    text-align:center;
+    text-align: center;
   }
   .allow #button_allow:after {
     display: none;
@@ -633,16 +642,17 @@
     margin: 0;
     font-family: 'roboto';
   }
-
   /*TABLET STYLES*/
+
   @media screen and (min-width: 640px) {
     header img {}
     .allow {
       padding: 0px;
-      display:-webkit-box;
-      display:-webkit-flex;
-      display:-ms-flexbox;
-      display:flex;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      height: 100%;
     }
     .allow .content {
       display: -webkit-box;
@@ -660,8 +670,13 @@
     .allow .content>ul:last-child {
       text-align: left;
     }
+    .allow #advise_email>a {
+      display: inline-block;
+      width: inherit;
+    }
   }
-  /*MEIDUM SCREENS STYLES*/
+  /*HEADER MENU STYLES*/
+
   @media screen and (min-width: 769px) {
     header ul {
       display: block;
