--- a/public/form/css/bundle.css
+++ b/public/form/css/bundle.css
@@ -36,7 +36,7 @@
 
   @font-face {
     font-family: 'roboto';
-    src: url('roboto/Roboto-Regular.ttf') format('truetype');
+    src: url('roboto/Roboto-Regular.ttf') format('truetype'), url('roboto/Roboto-Bold.ttf') format('truetype'), url('roboto/Roboto-Light.ttf') format('truetype');
   }
   /**/
 
@@ -185,7 +185,7 @@
     transition: visibility 0.3s, opacity 0.3s;
   }
   section {
-    background-color: rgba(23, 64, 132, 0.8);
+    /*background-color: rgba(23, 64, 132, 0.8);*/
     height: calc(100%+ 120px);
     display: -webkit-box;
     display: -webkit-flex;
@@ -271,7 +271,7 @@
     border-bottom: 2px solid #ef4323;
   }
   input[type='submit'] {
-    background-color: rgb(140, 187, 198);
+    /*background-color: rgb(140, 187, 198);*/
     color: #fff;
     font-size: 14px;
     font-weight: 100;
@@ -442,6 +442,30 @@
   .bg.al {
     background-image: url('../img/ship3.png');
     overflow: auto;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: auto;
+    padding: 60px 25px 30px 25px;
+  }
+  .bg.al::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(23, 64, 132, 0.8);
+    z-index: -1;
   }
   @media only screen and (max-device-width: 768px) {
     header {
@@ -529,7 +553,8 @@
     height: initial;
     display: block;
     min-height: initial;
-    padding:30px !important;
+    padding: 30px !important;
+    z-index: 1;
   }
   .allow hr {
     width: 100%;
@@ -546,12 +571,14 @@
   .allow h1 {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
-    margin-bottom: 30px;
-    font-size: 70px;
+    margin-bottom: 20px;
+    font-size: 35px;
     font-weight: 700;
     letter-spacing: -1px;
-    text-align: center;
+    text-align:left;
     display: block;
+    font-weight: bold;
+    text-align:left;
   }
   .allow h2 {
     margin-bottom: 30px;
@@ -559,7 +586,8 @@
     font-weight: 400;
     line-height: 1.68;
     display: block;
-    text-align: center;
+    text-align:left;
+
   }
   .allow .content {
     margin: 0 auto;
@@ -577,6 +605,7 @@
     display: block;
     vertical-align: bottom;
     box-sizing: border-box;
+    text-align: left;
   }
   .allow .content>ul>li {
     box-sizing: border-box;
@@ -584,15 +613,12 @@
   }
   .allow .content>ul:first-child {
     margin-right: 0px;
-    text-align: center;
   }
-  .allow .content>ul:last-child {
-    text-align: center;
-  }
+  .allow .content>ul:last-child {}
   .allow #advise_email {
     font-size: 14px;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
     display: block;
     margin-bottom: 55px;
     margin-top: 0;
@@ -610,7 +636,7 @@
     display: block;
     height: 1px;
     background-color: #f04323;
-    margin-top: 2px;
+    margin-top: -4px;
   }
   .allow #button_allow {
     background-color: #8abbc7;
@@ -646,13 +672,30 @@
 
   @media screen and (min-width: 640px) {
     header img {}
+    .bg.al {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+    }
     .allow {
       padding: 0px;
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      height: 100%;
+    }
+    .allow h1{
+      font-size:70px;
+      margin-bottom:30px;
     }
     .allow .content {
       display: -webkit-box;
@@ -678,12 +721,27 @@
   /*HEADER MENU STYLES*/
 
   @media screen and (min-width: 769px) {
+    .bg.al {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+    }
     header ul {
       display: block;
       list-style: none;
     }
     .allow {
       padding: 0px;
+      z-index: 1;
     }
     header img {
       height: 70px;
