create blog page and styles

--- a/app/styles/base/text.scss
+++ b/app/styles/base/text.scss
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100,900);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700);
 /*TYPOGRAPHY*/
 $font-family-primary: 'Roboto', sans-serif;
+$font-family-secondary: 'Roboto Slab', serif;
 // $font-family-secondary:;
 
 // $font-size-xxlarge: 100px;
