--- a/app/styles/components/c-cover_page.scss
+++ b/app/styles/components/c-cover_page.scss
@@ -1,7 +1,7 @@
 @import '../base/text.scss';
 @import '../base/colors.scss';
 
-.c_cover_page {
+.c-cover-page {
   background-color: $bluesecondary;
   padding-top: 100px;
   h1 {
@@ -23,6 +23,17 @@
       margin-top: 18px;
       margin-bottom: 10px;
       width: 174px;
+    }
+  }
+  .title_cover_blog{
+    &:after{
+      content: "";
+      display: block;
+      height: 5px;
+      background-color: $color3;
+      margin-top: 18px;
+      margin-bottom: 20px;
+      width: 210px;
     }
   }
   p {
@@ -58,5 +69,14 @@
       stroke-width: 3;
       stroke: $color4;
     }
+  }
+  .footer_header_blog{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 170px;
+    padding-left: 140px;
+    color: $white;
+    padding-bottom: 40px;
   }
 }
