--- a/app/styles/components/c-list_posts.scss
+++ b/app/styles/components/c-list_posts.scss
@@ -10,8 +10,9 @@
       line-height: 1.05;
       color: $color7;
       display: block;
-      padding: 0 290px;
       margin: 60px auto 18px;
+      width: 100%;
+      max-width: 700px;
     }
     span {
       p {
@@ -21,8 +22,9 @@
         line-height: 1.63;
         color: $color7;
         display: block;
-        padding: 0 290px;
         margin: 0px auto 18px;
+        width: 100%;
+        max-width: 700px;
       }
     }
     div {
@@ -38,7 +40,10 @@
     }
   }
   .button-more {
-    padding: 0 290px;
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    display: block;
     a {
       display: flex;
       align-items: center;
@@ -62,5 +67,8 @@
     height: 2px;
     background-color: $color8;
     margin-top: 65px;
+    &:after{
+      display: none;
+    }
   }
 }
