--- a/app/styles/components/c-pagination-blog.scss
+++ b/app/styles/components/c-pagination-blog.scss
@@ -28,6 +28,8 @@
         cursor: pointer;
         color: $color6;
         margin-right: 20px;
+        width: 14px;
+        text-align: center;
         &:after {
           margin-right: 0;
         }
